# ternoa-node

./: Cargo.toml  README.md  rust-toolchain.toml
client/src/: lib.rs
core-primitives/src/: lib.rs
node/: Cargo.toml
node/src/: command.rs  rpc.rs  service.rs
node/src/chain_spec/: alphanet.rs  mainnet.rs  mod.rs
runtime/alphanet/: Cargo.toml
runtime/alphanet/src/: lib.rs  pallets.rs  version.rs
runtime/alphanet/src/weights/: frame_system.rs  pallet_assets.rs  pallet_balances.rs  pallet_identity.rs  pallet_im_online.rs  pallet_membership.rs  pallet_preimage.rs  pallet_treasury.rs
runtime/common/src/: election_provider_multi_phase.rs  identity.rs  imonline.rs  lib.rs  preimage.rs  shared.rs  staking.rs  treasury.rs
runtime/mainnet/: Cargo.toml
runtime/mainnet/src/: lib.rs  pallets.rs  version.rs
runtime/mainnet/src/weights/: frame_system.rs  pallet_assets.rs  pallet_balances.rs  pallet_scheduler.rs
