[package]
name = "ternoa-node"
version = "1.4.3"
description = "Ternoa node"
edition = "2021"
license = "GNU GPL v3"
build = "build.rs"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[[bin]]
name = "ternoa-node"

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
futures = { version = "0.3.30", features = ["thread-pool"]}
log = "0.4.21"
rand = "0.8.5"
hex-literal = "0.4"
serde = { version = "1.0.197", features = [ "derive" ] }

sc-cli = { version = "0.36.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-core = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-executor = { version = "0.32.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-service = { version = "0.35.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-telemetry = { version = "15.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-keystore = { version = "25.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-transaction-pool = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-transaction-pool-api = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-chain-spec = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-network = { version = "0.34.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-network-statement = { version = "0.16.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-network-common = { version = "0.33.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-network-sync = { version = "0.33.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-sysinfo = { version = "27.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-consensus-babe = { version = "0.34.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-consensus-babe = { version = "0.32.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-consensus = { version = "0.32.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-consensus = { version = "0.33.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-consensus-grandpa = { version = "0.19.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-consensus-grandpa = { version = "13.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-consensus-slots = { version = "0.33.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-client-api = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-storage-monitor = { version = "0.16.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-runtime = { version = "31.0.1", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-sync-state-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-io = { version = "30.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-timestamp = { version = "26.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-inherents = { version = "26.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-keyring = { version = "31.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-keystore = { version = "0.34.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-transaction-storage-proof = { version = "26.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0", default-features = false }

frame-system = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
pallet-transaction-payment = { version = "28.0.0", default-features = false, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
pallet-im-online = { version = "27.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
pallet-staking = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }

# These dependencies are used for the node template's RPCs
jsonrpsee = { version = "0.16.2", features = ["server"] }
sc-rpc = { version = "29.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-api = { version = "26.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-rpc-api = { version = "0.33.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-blockchain = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-block-builder = { version = "26.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-basic-authorship = { version = "0.34.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
substrate-frame-rpc-system = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
pallet-transaction-payment-rpc = { version = "30.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-consensus-babe-rpc = { version = "0.34.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-consensus-epochs = { version = "0.33.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-consensus-grandpa-rpc = { version = "0.19.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-rpc-spec-v2 = { version = "0.34.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sc-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
substrate-state-trie-migration-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "28.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
frame-benchmarking-cli = { version = "32.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }

# Local Dependencies
alphanet-runtime = { path = "../runtime/alphanet", optional = true }
mainnet-runtime = { path = "../runtime/mainnet", optional = true }
ternoa-runtime-common = { version = "1.4.2", path = "../runtime/common" }

# Common types
ternoa-core-primitives = { version = "1.4.2", default-features = false, path = "../core-primitives" }
ternoa-client = { path = "../client", default-features = false, optional = true }

alphanet-runtime-constants = { path = "../runtime/alphanet/constants", optional = true }
mainnet-runtime-constants = { path = "../runtime/mainnet/constants", optional = true }

# CLI-specific dependencies
#try-runtime-cli = { version = "0.10.0-dev", optional = true, git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }
config = "0.14.0"

[build-dependencies]
substrate-build-script-utils = { version = "11.0.0", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.13.0" }

[features]
default = [ "db", "full-node", "mainnet-native", "alphanet-native"]
full-node = [ "ternoa-client" ]
db = [
	"sc-service/rocksdb"
]

alphanet-native = [ "alphanet-runtime", "alphanet-runtime-constants", "ternoa-client/alphanet" ]
mainnet-native = [ "mainnet-runtime", "mainnet-runtime-constants", "ternoa-client/mainnet" ]
# Dependencies that are only required if runtime benchmarking should be build.
runtime-benchmarks = [
	"alphanet-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = ["alphanet-runtime/try-runtime" ]
#"try-runtime-cli/try-runtime"